cursive-bootstrap/tests/ui/E-CON/E-CON-0250.cursive
// RUN: compile-fail
// DIAG: E-CON-0250
// SPEC: 8.9
// DESC: sync inside async-returning procedure

procedure sync_in_async() -> Future<i32> {
    let result: i32 = sync {  //~ ERROR E-CON-0250: sync inside async
        42
    }
    return result
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}

